# Change Log
[CCDatabasePeripheralLite](https://github.com/Iunius118/cc-dbp-lite#readme).
[Source](https://github.com/Iunius118/cc-dbp-lite).

## [Unreleased]

## [0.1.2]
### Fixed
- Fix memory leaks caused by remaining connections to databases.

## [0.1.1]
### Added
- Async execution functions and `dbstorage_response` event.
- Function `closeAll()`.

## [0.1.0]
- Initial release.
- Require Minecraft 1.20.1 and Forge 47.3.0.
- Require CC: Tweaked 1.20.1-forge-1.112.0.