@@ -48,7 +48,7 @@ mod_name=CCDatabasePeripheralLite
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT license
 # The mod version. See https://semver.org/
-mod_version=0.1.2
+mod_version=0.1.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
