@@ -4,7 +4,6 @@ import com.github.iunius118.ccdbplite.CCDatabasePeripheralLite;
 import com.github.iunius118.ccdbplite.detabase.Database;
 import com.github.iunius118.ccdbplite.detabase.LuaPreparedSQLStatement;
 import com.github.iunius118.ccdbplite.detabase.LuaSQLStatement;
-import com.github.iunius118.ccdbplite.detabase.LuaSQLStatementBase;
 import dan200.computercraft.api.ComputerCraftAPI;
 import dan200.computercraft.api.lua.LuaException;
 import dan200.computercraft.api.lua.LuaFunction;
@@ -20,10 +19,6 @@ import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Set;
 
 public class DatabaseStoragePeripheral implements IPeripheral {
     public static final String TYPE = "dbstorage";
@@ -39,35 +34,6 @@ public class DatabaseStoragePeripheral implements IPeripheral {
     @Override
     public String getType() {
         return TYPE;
-    }
-
-    @Override
-    public void attach(IComputerAccess computer) {
-        Map<IComputerAccess, Set<LuaSQLStatementBase>> connections = storage.getDatabaseConnections();
-
-        synchronized (connections) {
-            if (!connections.containsKey(computer)) {
-                // Add Set of connections from computer
-                connections.put(computer, new HashSet<>());
-            }
-        }
-    }
-
-    @Override
-    public void detach(IComputerAccess computer) {
-        Map<IComputerAccess, Set<LuaSQLStatementBase>> connections = storage.getDatabaseConnections();
-
-        synchronized (connections) {
-            Set<LuaSQLStatementBase> statements = connections.getOrDefault(computer, Collections.emptySet());
-
-            // Close all connections from detached computer
-            for (LuaSQLStatementBase statement : statements) {
-                statement.closeConnection();
-            }
-
-            // Remove Set of connections from computer
-            connections.remove(computer);
-        }
     }
 
     @Nullable
@@ -104,11 +70,7 @@ public class DatabaseStoragePeripheral implements IPeripheral {
      */
     @LuaFunction
     public final LuaSQLStatement createStatement(IComputerAccess computer) throws LuaException {
-        // Create a new statement
-        LuaSQLStatement statement = Database.createStatement(computer, getDatabaseURL());
-        // Record the statement
-        addStatement(computer, statement);
-        return statement;
+        return Database.createStatement(computer, getDatabaseURL());
     }
 
     /**
@@ -120,28 +82,15 @@ public class DatabaseStoragePeripheral implements IPeripheral {
      */
     @LuaFunction
     public final LuaPreparedSQLStatement prepareStatement(IComputerAccess computer, String sql) throws LuaException {
-        // Create a new prepared statement
-        LuaPreparedSQLStatement preparedStatement = Database.prepareStatement(computer, getDatabaseURL(), sql);
-        // Record the statement
-        addStatement(computer, preparedStatement);
-        return preparedStatement;
+        return Database.prepareStatement(computer, getDatabaseURL(), sql);
     }
 
     /**
      * Releases all connections and resources to the database from this computer immediately.
-     *
-     * @throws LuaException Thrown when SQL driver returns a warning or error.
      */
     @LuaFunction
-    public final void closeAll(IComputerAccess computer) throws LuaException {
-        Map<IComputerAccess, Set<LuaSQLStatementBase>> connections = storage.getDatabaseConnections();
-
-        synchronized (connections) {
-            Set<LuaSQLStatementBase> statements = connections.get(computer);
-            // Close all connections to the database from the computer
-            statements.forEach(LuaSQLStatementBase::closeConnection);
-            statements.clear();
-        }
+    public final void closeAll(IComputerAccess computer) {
+        Database.closeConnections(computer);
     }
 
     private String getDatabaseURL() throws LuaException {
@@ -172,18 +121,6 @@ public class DatabaseStoragePeripheral implements IPeripheral {
         }
 
         storage.setStorageID(newID);
-    }
-
-    public void addStatement(IComputerAccess computer, LuaSQLStatementBase statement) {
-        Map<IComputerAccess, Set<LuaSQLStatementBase>> connections = storage.getDatabaseConnections();
-
-        synchronized (connections) {
-            Set<LuaSQLStatementBase> statements = connections.get(computer);
-            // Remove all statements that are closed
-            statements.removeIf(LuaSQLStatementBase::isClosed);
-            // Add new statement
-            statements.add(statement);
-        }
     }
 
     public static class Provider implements ICapabilityProvider {
